--- a/part2/exercises-2/src/components/styles.css
+++ b/part2/exercises-2/src/components/styles.css
@@ -23,13 +23,13 @@
  }
  
  ul {
-   list-style-type: none; 
+   list-style-type: square; 
    padding: 2%;
  }
  
  li { 
    margin-bottom: 10px; 
-   list-style-type: disc;
+   list-style-type: square;
  }
  
  h1 {
